--- a/familyTree/css/asmsite.css
+++ b/familyTree/css/asmsite.css
@@ -18,11 +18,11 @@
   }
   
   body {
-    background-color: #dacab8;
+    background-color: #f0edea;
   }
 
   .header {
-    background-color: #c79866;
+    background-color: #323038;
     color: #ffffff;
     padding: 13px;
   }
